<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A3650"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCalculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="#009688"
        android:textAlignment="textEnd"
        android:textColor="#1B273F"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:background="#1B273F"
        android:textAlignment="textEnd"
        android:textColor="#009688"
        android:textSize="48sp" />

    <LinearLayout
        android:id="@+id/layoutBotoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="12"
        android:background="#B2B0B0"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/layoutBotoes741"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#2A3650"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#1B273F"
                android:text="@string/msg7"
                android:textColor="#009688"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#1B273F"
                android:text="@string/msg4"
                android:textColor="#009688"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#1B273F"
                android:text="@string/msg1"
                android:textColor="#009688"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnPonto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#1B273F"
                android:text="@string/msg_ponto"
                android:textColor="#009688"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutBotoes852"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#2A3650"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#1B273F"
                android:text="@string/msg8"
                android:textColor="#009688"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#1B273F"
                android:text="@string/msg5"
                android:textColor="#009688"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#1B273F"
                android:text="@string/msg2"
                android:textColor="#009688"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#1B273F"
                android:text="@string/msg0"
                android:textColor="#009688"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutBotoes963"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#2A3650"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/btn9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#1B273F"
                android:text="@string/msg9"
                android:textColor="#009688"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#1B273F"
                android:text="@string/msg6"
                android:textColor="#009688"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#1B273F"
                android:text="@string/msg3"
                android:textColor="#009688"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnIgual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#009688"
                android:clickable="false"
                android:text="@string/msg_igual"
                android:textColor="#1B273F"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutOperacoes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#2A3650"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/btnLimpar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#009688"
                android:enabled="false"
                android:text="@string/msg_limpar"
                android:textColor="#1B273F"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btnApagar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#1B273F"
                app:srcCompat="@android:drawable/ic_input_delete" />

            <Button
                android:id="@+id/btnDividir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#1B273F"
                android:text="@string/msg_divisao"
                android:textColor="#009688"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMultiplicar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#1B273F"
                android:text="@string/msg_multi"
                android:textColor="#009688"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSomar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#1B273F"
                android:text="@string/msg_soma"
                android:textColor="#009688"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSubtrair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#1B273F"
                android:text="@string/msg_subtracao"
                android:textColor="#009688"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvAutoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:text="William Novak"
        android:textAlignment="textEnd"
        android:textColor="#80BCFB" />

</LinearLayout>